generate colab notebooks

--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fcbfacc7",
+   "id": "2af6c991",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e25b987d",
+   "id": "2e365f58",
+   "metadata": {},
+   "source": [
+    "### 📦 Import Data Designer\n",
+    "\n",
+    "- `data_designer.config` provides access to the configuration API.\n",
+    "\n",
+    "- `DataDesigner` is the main interface for data generation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6b60c35",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8194911",
+   "id": "352ad006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ffb95b",
+   "id": "d48fcd7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,40 +64,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2c5c31e2",
-   "metadata": {},
-   "source": [
-    "### 📦 Import the essentials\n",
-    "\n",
-    "- The `essentials` module provides quick access to the most commonly used objects.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a9489f",
+   "id": "7fa5c652",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_designer.essentials import (\n",
-    "    CategorySamplerParams,\n",
-    "    ChatCompletionInferenceParams,\n",
-    "    DataDesigner,\n",
-    "    DataDesignerConfigBuilder,\n",
-    "    LLMTextColumnConfig,\n",
-    "    ModelConfig,\n",
-    "    PersonFromFakerSamplerParams,\n",
-    "    SamplerColumnConfig,\n",
-    "    SamplerType,\n",
-    "    SubcategorySamplerParams,\n",
-    "    UniformSamplerParams,\n",
-    ")"
+    "import data_designer.config as dd\n",
+    "from data_designer.interface import DataDesigner"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "141b77e2",
+   "id": "c70454d5",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -98,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bca9124",
+   "id": "bb2765d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4142887",
+   "id": "8cd5279b",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -124,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3762937",
+   "id": "cd90811a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,11 +129,11 @@
     "MODEL_ALIAS = \"nemotron-nano-v3\"\n",
     "\n",
     "model_configs = [\n",
-    "    ModelConfig(\n",
+    "    dd.ModelConfig(\n",
     "        alias=MODEL_ALIAS,\n",
     "        model=MODEL_ID,\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=ChatCompletionInferenceParams(\n",
+    "        inference_parameters=dd.ChatCompletionInferenceParams(\n",
     "            temperature=1.0,\n",
     "            top_p=1.0,\n",
     "            max_tokens=2048,\n",
@@ -154,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fec3a11f",
+   "id": "ca306aca",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -169,16 +160,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5324dbec",
+   "id": "8dda0de2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_builder = DataDesignerConfigBuilder(model_configs=model_configs)"
+    "config_builder = dd.DataDesignerConfigBuilder(model_configs=model_configs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9acab1b8",
+   "id": "2bc4a65c",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -195,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9916a82e",
+   "id": "5bc65ad1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8452819f",
+   "id": "34f81d0b",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -213,15 +204,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c99a9fe",
+   "id": "2318c75a",
    "metadata": {},
    "outputs": [],
    "source": [
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"product_category\",\n",
-    "        sampler_type=SamplerType.CATEGORY,\n",
-    "        params=CategorySamplerParams(\n",
+    "        sampler_type=dd.SamplerType.CATEGORY,\n",
+    "        params=dd.CategorySamplerParams(\n",
     "            values=[\n",
     "                \"Electronics\",\n",
     "                \"Clothing\",\n",
@@ -234,10 +225,10 @@
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"product_subcategory\",\n",
-    "        sampler_type=SamplerType.SUBCATEGORY,\n",
-    "        params=SubcategorySamplerParams(\n",
+    "        sampler_type=dd.SamplerType.SUBCATEGORY,\n",
+    "        params=dd.SubcategorySamplerParams(\n",
     "            category=\"product_category\",\n",
     "            values={\n",
     "                \"Electronics\": [\n",
@@ -281,10 +272,10 @@
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"target_age_range\",\n",
-    "        sampler_type=SamplerType.CATEGORY,\n",
-    "        params=CategorySamplerParams(values=[\"18-25\", \"25-35\", \"35-50\", \"50-65\", \"65+\"]),\n",
+    "        sampler_type=dd.SamplerType.CATEGORY,\n",
+    "        params=dd.CategorySamplerParams(values=[\"18-25\", \"25-35\", \"35-50\", \"50-65\", \"65+\"]),\n",
     "    )\n",
     ")\n",
     "\n",
@@ -294,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9028e845",
+   "id": "f8c68da2",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -303,32 +294,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b64910fc",
+   "id": "b8cb78e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"customer\",\n",
-    "        sampler_type=SamplerType.PERSON_FROM_FAKER,\n",
-    "        params=PersonFromFakerSamplerParams(age_range=[18, 70], locale=\"en_US\"),\n",
+    "        sampler_type=dd.SamplerType.PERSON_FROM_FAKER,\n",
+    "        params=dd.PersonFromFakerSamplerParams(age_range=[18, 70], locale=\"en_US\"),\n",
     "    )\n",
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"number_of_stars\",\n",
-    "        sampler_type=SamplerType.UNIFORM,\n",
-    "        params=UniformSamplerParams(low=1, high=5),\n",
+    "        sampler_type=dd.SamplerType.UNIFORM,\n",
+    "        params=dd.UniformSamplerParams(low=1, high=5),\n",
     "        convert_to=\"int\",  # Convert the sampled float to an integer.\n",
     "    )\n",
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"review_style\",\n",
-    "        sampler_type=SamplerType.CATEGORY,\n",
-    "        params=CategorySamplerParams(\n",
+    "        sampler_type=dd.SamplerType.CATEGORY,\n",
+    "        params=dd.CategorySamplerParams(\n",
     "            values=[\"rambling\", \"brief\", \"detailed\", \"structured with bullet points\"],\n",
     "            weights=[1, 2, 2, 1],\n",
     "        ),\n",
@@ -340,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c56ff50",
+   "id": "57b604d5",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -355,12 +346,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db03dbae",
+   "id": "b615760d",
    "metadata": {},
    "outputs": [],
    "source": [
     "config_builder.add_column(\n",
-    "    LLMTextColumnConfig(\n",
+    "    dd.LLMTextColumnConfig(\n",
     "        name=\"product_name\",\n",
     "        prompt=(\n",
     "            \"You are a helpful assistant that generates product names. DO NOT add quotes around the product name.\\n\\n\"\n",
@@ -373,7 +364,7 @@
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    LLMTextColumnConfig(\n",
+    "    dd.LLMTextColumnConfig(\n",
     "        name=\"customer_review\",\n",
     "        prompt=(\n",
     "            \"You are a customer named {{ customer.first_name }} from {{ customer.city }}, {{ customer.state }}. \"\n",
@@ -391,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee137104",
+   "id": "eeb124f7",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -408,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d318e88f",
+   "id": "fffc9d8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6327bd4",
+   "id": "643ee6a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d9f8ba0",
+   "id": "69dfb926",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b1df1d7",
+   "id": "4f38ca0d",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -452,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c19da33",
+   "id": "a044678d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e35f0f5",
+   "id": "8c7147ab",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -475,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07bdf600",
+   "id": "d6a92b76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27959f17",
+   "id": "fb888621",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "953b6749",
+   "id": "521d34ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471fb9a5",
+   "id": "910b21a2",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
