--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "079d58ee",
+   "id": "040374c7",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecff521c",
+   "id": "c63f4819",
+   "metadata": {},
+   "source": [
+    "### 📦 Import Data Designer\n",
+    "\n",
+    "- `data_designer.config` provides access to the configuration API.\n",
+    "\n",
+    "- `DataDesigner` is the main interface for data generation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b3c60c",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd576d9d",
+   "id": "0760772a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce54e602",
+   "id": "b19f9bf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,40 +66,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1b105464",
-   "metadata": {},
-   "source": [
-    "### 📦 Import the essentials\n",
-    "\n",
-    "- The `essentials` module provides quick access to the most commonly used objects.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961c83c0",
+   "id": "210a068d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_designer.essentials import (\n",
-    "    CategorySamplerParams,\n",
-    "    ChatCompletionInferenceParams,\n",
-    "    DataDesigner,\n",
-    "    DataDesignerConfigBuilder,\n",
-    "    ExpressionColumnConfig,\n",
-    "    LLMStructuredColumnConfig,\n",
-    "    ModelConfig,\n",
-    "    PersonFromFakerSamplerParams,\n",
-    "    SamplerColumnConfig,\n",
-    "    SamplerType,\n",
-    "    SubcategorySamplerParams,\n",
-    ")"
+    "import data_designer.config as dd\n",
+    "from data_designer.interface import DataDesigner"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "953dbcc6",
+   "id": "c0761a71",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -100,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72d80b48",
+   "id": "5f9b1d18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15d6f2f",
+   "id": "c8b4f1ce",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -126,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d60c4f65",
+   "id": "d6f51bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,11 +131,11 @@
     "MODEL_ALIAS = \"nemotron-nano-v3\"\n",
     "\n",
     "model_configs = [\n",
-    "    ModelConfig(\n",
+    "    dd.ModelConfig(\n",
     "        alias=MODEL_ALIAS,\n",
     "        model=MODEL_ID,\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=ChatCompletionInferenceParams(\n",
+    "        inference_parameters=dd.ChatCompletionInferenceParams(\n",
     "            temperature=1.0,\n",
     "            top_p=1.0,\n",
     "            max_tokens=2048,\n",
@@ -156,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63b77ae7",
+   "id": "0995e464",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -171,16 +162,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b7c73e2",
+   "id": "9efa17ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_builder = DataDesignerConfigBuilder(model_configs=model_configs)"
+    "config_builder = dd.DataDesignerConfigBuilder(model_configs=model_configs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "754134fe",
+   "id": "6d389e01",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -207,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c02a86",
+   "id": "73d4df9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f5a5a27",
+   "id": "1b3c39bb",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -244,26 +235,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99db5612",
+   "id": "2a89cea7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Since we often only want a few attributes from Person objects, we can\n",
     "# set drop=True in the column config to drop the column from the final dataset.\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"customer\",\n",
-    "        sampler_type=SamplerType.PERSON_FROM_FAKER,\n",
-    "        params=PersonFromFakerSamplerParams(),\n",
+    "        sampler_type=dd.SamplerType.PERSON_FROM_FAKER,\n",
+    "        params=dd.PersonFromFakerSamplerParams(),\n",
     "        drop=True,\n",
     "    )\n",
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"product_category\",\n",
-    "        sampler_type=SamplerType.CATEGORY,\n",
-    "        params=CategorySamplerParams(\n",
+    "        sampler_type=dd.SamplerType.CATEGORY,\n",
+    "        params=dd.CategorySamplerParams(\n",
     "            values=[\n",
     "                \"Electronics\",\n",
     "                \"Clothing\",\n",
@@ -276,10 +267,10 @@
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"product_subcategory\",\n",
-    "        sampler_type=SamplerType.SUBCATEGORY,\n",
-    "        params=SubcategorySamplerParams(\n",
+    "        sampler_type=dd.SamplerType.SUBCATEGORY,\n",
+    "        params=dd.SubcategorySamplerParams(\n",
     "            category=\"product_category\",\n",
     "            values={\n",
     "                \"Electronics\": [\n",
@@ -323,10 +314,10 @@
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"target_age_range\",\n",
-    "        sampler_type=SamplerType.CATEGORY,\n",
-    "        params=CategorySamplerParams(values=[\"18-25\", \"25-35\", \"35-50\", \"50-65\", \"65+\"]),\n",
+    "        sampler_type=dd.SamplerType.CATEGORY,\n",
+    "        params=dd.CategorySamplerParams(values=[\"18-25\", \"25-35\", \"35-50\", \"50-65\", \"65+\"]),\n",
     "    )\n",
     ")\n",
     "\n",
@@ -334,15 +325,15 @@
     "# In this example, we set the review style to rambling if the target age range is 18-25.\n",
     "# Note conditional parameters are only supported for Sampler column types.\n",
     "config_builder.add_column(\n",
-    "    SamplerColumnConfig(\n",
+    "    dd.SamplerColumnConfig(\n",
     "        name=\"review_style\",\n",
-    "        sampler_type=SamplerType.CATEGORY,\n",
-    "        params=CategorySamplerParams(\n",
+    "        sampler_type=dd.SamplerType.CATEGORY,\n",
+    "        params=dd.CategorySamplerParams(\n",
     "            values=[\"rambling\", \"brief\", \"detailed\", \"structured with bullet points\"],\n",
     "            weights=[1, 2, 2, 1],\n",
     "        ),\n",
     "        conditional_params={\n",
-    "            \"target_age_range == '18-25'\": CategorySamplerParams(values=[\"rambling\"]),\n",
+    "            \"target_age_range == '18-25'\": dd.CategorySamplerParams(values=[\"rambling\"]),\n",
     "        },\n",
     "    )\n",
     ")\n",
@@ -353,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9d62fa0",
+   "id": "4c4516e1",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -370,20 +361,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c784693",
+   "id": "05eeb4c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# We can create new columns using Jinja expressions that reference\n",
     "# existing columns, including attributes of nested objects.\n",
     "config_builder.add_column(\n",
-    "    ExpressionColumnConfig(name=\"customer_name\", expr=\"{{ customer.first_name }} {{ customer.last_name }}\")\n",
+    "    dd.ExpressionColumnConfig(name=\"customer_name\", expr=\"{{ customer.first_name }} {{ customer.last_name }}\")\n",
     ")\n",
     "\n",
-    "config_builder.add_column(ExpressionColumnConfig(name=\"customer_age\", expr=\"{{ customer.age }}\"))\n",
+    "config_builder.add_column(dd.ExpressionColumnConfig(name=\"customer_age\", expr=\"{{ customer.age }}\"))\n",
     "\n",
     "config_builder.add_column(\n",
-    "    LLMStructuredColumnConfig(\n",
+    "    dd.LLMStructuredColumnConfig(\n",
     "        name=\"product\",\n",
     "        prompt=(\n",
     "            \"Create a product in the '{{ product_category }}' category, focusing on products  \"\n",
@@ -397,7 +388,7 @@
     "\n",
     "# We can even use if/else logic in our Jinja expressions to create more complex prompt patterns.\n",
     "config_builder.add_column(\n",
-    "    LLMStructuredColumnConfig(\n",
+    "    dd.LLMStructuredColumnConfig(\n",
     "        name=\"customer_review\",\n",
     "        prompt=(\n",
     "            \"Your task is to write a review for the following product:\\n\\n\"\n",
@@ -423,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "710b9527",
+   "id": "12f335eb",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -440,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ff3b750",
+   "id": "9f764a9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9086a983",
+   "id": "d8e53f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd9d7618",
+   "id": "52b424a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9324b008",
+   "id": "bc6493bc",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -484,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62240760",
+   "id": "36f2ed36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb01f9be",
+   "id": "c7d3c0f0",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -507,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da730cf",
+   "id": "0344849d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e356874",
+   "id": "7b2f7868",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71c7045c",
+   "id": "08fc7a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ecce31",
+   "id": "1d89092b",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
