--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0e31a83f",
+   "id": "8c0685e9",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3be8cde",
+   "id": "3db0af74",
+   "metadata": {},
+   "source": [
+    "### 📦 Import Data Designer\n",
+    "\n",
+    "- `data_designer.config` provides access to the configuration API.\n",
+    "\n",
+    "- `DataDesigner` is the main interface for data generation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f6961b0",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8f09b01",
+   "id": "9529c65f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f08e6786",
+   "id": "136bf26e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,34 +66,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "45b3c42c",
-   "metadata": {},
-   "source": [
-    "### 📦 Import the essentials\n",
-    "\n",
-    "- The `essentials` module provides quick access to the most commonly used objects.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d51e99cc",
+   "id": "ca2fa0b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_designer.essentials import (\n",
-    "    ChatCompletionInferenceParams,\n",
-    "    DataDesigner,\n",
-    "    DataDesignerConfigBuilder,\n",
-    "    LocalFileSeedSource,\n",
-    "    ModelConfig,\n",
-    ")"
+    "import data_designer.config as dd\n",
+    "from data_designer.interface import DataDesigner"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91eb3600",
+   "id": "564d20a1",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -94,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1ec832d",
+   "id": "2076e8e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef6a0aa",
+   "id": "bf4d999a",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -120,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "744daaf5",
+   "id": "27042d5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,11 +131,11 @@
     "MODEL_ALIAS = \"nemotron-nano-v3\"\n",
     "\n",
     "model_configs = [\n",
-    "    ModelConfig(\n",
+    "    dd.ModelConfig(\n",
     "        alias=MODEL_ALIAS,\n",
     "        model=MODEL_ID,\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=ChatCompletionInferenceParams(\n",
+    "        inference_parameters=dd.ChatCompletionInferenceParams(\n",
     "            temperature=1.0,\n",
     "            top_p=1.0,\n",
     "            max_tokens=2048,\n",
@@ -150,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389ecac1",
+   "id": "258959d8",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -165,16 +162,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4740f1a1",
+   "id": "774c877c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_builder = DataDesignerConfigBuilder(model_configs=model_configs)"
+    "config_builder = dd.DataDesignerConfigBuilder(model_configs=model_configs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9a236568",
+   "id": "9cb3f9fd",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -199,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea1d60b",
+   "id": "0b144803",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,14 +207,14 @@
     "local_filename, _ = urllib.request.urlretrieve(url, \"gretelai_symptom_to_diagnosis.csv\")\n",
     "\n",
     "# Seed datasets are passed as reference objects to the config builder.\n",
-    "seed_source = LocalFileSeedSource(path=local_filename)\n",
+    "seed_source = dd.LocalFileSeedSource(path=local_filename)\n",
     "\n",
     "config_builder.with_seed_dataset(seed_source)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6de8ab0e",
+   "id": "296e9b88",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -234,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "163c0fd0",
+   "id": "514d642d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de3ca49b",
+   "id": "d4aa32dd",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -341,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eb4b939",
+   "id": "4be850e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe93608",
+   "id": "1fd581ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81af5ab8",
+   "id": "206445c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98788369",
+   "id": "3c0a2806",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -385,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaaf15d8",
+   "id": "e826d8de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9605f1a",
+   "id": "e786fe6d",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -408,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "036ebe89",
+   "id": "528e8462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b89c44fb",
+   "id": "214b5fd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d02c5c7b",
+   "id": "a21c2dca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a65d036",
+   "id": "f5ca5cc0",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
