--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9fbb99f",
+   "id": "9a8f4f64",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fae1bc",
+   "id": "d85440f7",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d49f8681",
+   "id": "0d90bd46",
+   "metadata": {},
+   "source": [
+    "### 📦 Import Data Designer\n",
+    "\n",
+    "- `data_designer.config` provides access to the configuration API.\n",
+    "\n",
+    "- `DataDesigner` is the main interface for data generation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9a8e1a9",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82914e68",
+   "id": "f715c28a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f737043f",
+   "id": "8e33732b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,19 +75,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "126d2d70",
-   "metadata": {},
-   "source": [
-    "### 📦 Import the essentials\n",
-    "\n",
-    "- The `essentials` module provides quick access to the most commonly used objects.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8133d225",
+   "id": "cc63dfe9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,22 +94,13 @@
     "from rich.panel import Panel\n",
     "\n",
     "# Data Designer imports\n",
-    "from data_designer.essentials import (\n",
-    "    ChatCompletionInferenceParams,\n",
-    "    DataDesigner,\n",
-    "    DataDesignerConfigBuilder,\n",
-    "    DataFrameSeedSource,\n",
-    "    ImageContext,\n",
-    "    ImageFormat,\n",
-    "    LLMTextColumnConfig,\n",
-    "    ModalityDataType,\n",
-    "    ModelConfig,\n",
-    ")"
+    "import data_designer.config as dd\n",
+    "from data_designer.interface import DataDesigner"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6e44d2f3",
+   "id": "8c40cb71",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -120,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d79edba2",
+   "id": "2eb51e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a09d8ac2",
+   "id": "6cc7aca4",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -146,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa1eadd0",
+   "id": "63404d3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,11 +147,11 @@
     "MODEL_PROVIDER = \"nvidia\"\n",
     "\n",
     "model_configs = [\n",
-    "    ModelConfig(\n",
+    "    dd.ModelConfig(\n",
     "        alias=\"vision\",\n",
     "        model=\"meta/llama-4-scout-17b-16e-instruct\",\n",
     "        provider=MODEL_PROVIDER,\n",
-    "        inference_parameters=ChatCompletionInferenceParams(\n",
+    "        inference_parameters=dd.ChatCompletionInferenceParams(\n",
     "            temperature=0.60,\n",
     "            top_p=0.95,\n",
     "            max_tokens=2048,\n",
@@ -169,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a8b0155",
+   "id": "c1ee89b0",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -184,16 +177,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce4e11fe",
+   "id": "61077e2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_builder = DataDesignerConfigBuilder(model_configs=model_configs)"
+    "config_builder = dd.DataDesignerConfigBuilder(model_configs=model_configs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f50c5100",
+   "id": "e8af0928",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -210,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54e9b8e2",
+   "id": "3ebc13e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "667ec175",
+   "id": "02e9aeb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d17e91ad",
+   "id": "ba81b496",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "446cac84",
+   "id": "aa08941d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,19 +294,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d8f4839",
+   "id": "a40e41d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the seed dataset containing our processed images\n",
     "df_seed = pd.DataFrame(img_dataset)[[\"uuid\", \"image_filename\", \"base64_image\", \"page\", \"options\", \"source\"]]\n",
-    "config_builder.with_seed_dataset(DataFrameSeedSource(df=df_seed))"
+    "config_builder.with_seed_dataset(dd.DataFrameSeedSource(df=df_seed))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37e48d84",
+   "id": "7f89ae56",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -321,7 +314,7 @@
    "source": [
     "# Add a column to generate detailed document summaries\n",
     "config_builder.add_column(\n",
-    "    LLMTextColumnConfig(\n",
+    "    dd.LLMTextColumnConfig(\n",
     "        name=\"summary\",\n",
     "        model_alias=\"vision\",\n",
     "        prompt=(\n",
@@ -330,10 +323,10 @@
     "            \"Place a summary at the bottom.\"\n",
     "        ),\n",
     "        multi_modal_context=[\n",
-    "            ImageContext(\n",
+    "            dd.ImageContext(\n",
     "                column_name=\"base64_image\",\n",
-    "                data_type=ModalityDataType.BASE64,\n",
-    "                image_format=ImageFormat.PNG,\n",
+    "                data_type=dd.ModalityDataType.BASE64,\n",
+    "                image_format=dd.ImageFormat.PNG,\n",
     "            )\n",
     "        ],\n",
     "    )\n",
@@ -342,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed3ef62a",
+   "id": "1e28672e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -350,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111b3731",
+   "id": "18c97f17",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -367,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec2fb00",
+   "id": "838e3fe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c23cc669",
+   "id": "1e8e9a18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "408c2234",
+   "id": "cdf635f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab4b1222",
+   "id": "f94b2ba8",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -411,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e4eb0b1",
+   "id": "9f38cc55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c37e4c54",
+   "id": "bc6616a7",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -432,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab25b38",
+   "id": "35405370",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0575d43d",
+   "id": "6c7a2b96",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -469,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9a78f3",
+   "id": "7a158540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d007fbf2",
+   "id": "183cd111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8c0ab4",
+   "id": "c6a3eac1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51ea6611",
+   "id": "fe3bff71",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
