--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c0685e9",
+   "id": "b2a3e544",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db0af74",
+   "id": "d57c4f0a",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f6961b0",
+   "id": "f7da8723",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9529c65f",
+   "id": "90a12556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136bf26e",
+   "id": "8fcdfde5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca2fa0b2",
+   "id": "5899e85c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +78,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "564d20a1",
+   "id": "6c093c90",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
     "\n",
-    "- `DataDesigner` is the main object is responsible for managing the data generation process.\n",
+    "- `DataDesigner` is the main object responsible for managing the data generation process.\n",
     "\n",
     "- When initialized without arguments, the [default model providers](https://nvidia-nemo.github.io/DataDesigner/latest/concepts/models/default-model-settings/) are used.\n"
    ]
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2076e8e8",
+   "id": "6a2066fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4d999a",
+   "id": "f5e81142",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27042d5c",
+   "id": "880012ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "258959d8",
+   "id": "4b77a92c",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "774c877c",
+   "id": "f4ab6628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb3f9fd",
+   "id": "26fb0a63",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b144803",
+   "id": "84908e88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,16 +214,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "296e9b88",
+   "id": "1947e70a",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
     "\n",
-    "- Here we use `add_column` with keyword arguments (rather than imported config objects).\n",
-    "\n",
-    "- Generally, we recommend using concrete objects, but this is a convenient shorthand.\n",
-    "\n",
-    "- **Note**: The prompt template can reference fields from our seed dataset:\n",
+    "- The prompt template can reference fields from our seed dataset:\n",
     "  - `{{ diagnosis }}` - the medical diagnosis from the seed data\n",
     "  - `{{ patient_summary }}` - the symptom description from the seed data\n"
    ]
@@ -231,76 +227,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514d642d",
+   "id": "be2fbad1",
    "metadata": {},
    "outputs": [],
    "source": [
     "config_builder.add_column(\n",
-    "    name=\"patient_sampler\",\n",
-    "    column_type=\"sampler\",\n",
-    "    sampler_type=\"person_from_faker\",\n",
+    "    dd.SamplerColumnConfig(\n",
+    "        name=\"patient_sampler\",\n",
+    "        sampler_type=dd.SamplerType.PERSON_FROM_FAKER,\n",
+    "        params=dd.PersonFromFakerSamplerParams(),\n",
+    "    )\n",
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    name=\"doctor_sampler\",\n",
-    "    column_type=\"sampler\",\n",
-    "    sampler_type=\"person_from_faker\",\n",
+    "    dd.SamplerColumnConfig(\n",
+    "        name=\"doctor_sampler\",\n",
+    "        sampler_type=dd.SamplerType.PERSON_FROM_FAKER,\n",
+    "        params=dd.PersonFromFakerSamplerParams(),\n",
+    "    )\n",
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    name=\"patient_id\",\n",
-    "    column_type=\"sampler\",\n",
-    "    sampler_type=\"uuid\",\n",
-    "    params={\n",
-    "        \"prefix\": \"PT-\",\n",
-    "        \"short_form\": True,\n",
-    "        \"uppercase\": True,\n",
-    "    },\n",
+    "    dd.SamplerColumnConfig(\n",
+    "        name=\"patient_id\",\n",
+    "        sampler_type=dd.SamplerType.UUID,\n",
+    "        params=dd.UUIDSamplerParams(\n",
+    "            prefix=\"PT-\",\n",
+    "            short_form=True,\n",
+    "            uppercase=True,\n",
+    "        ),\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "config_builder.add_column(dd.ExpressionColumnConfig(name=\"first_name\", expr=\"{{ patient_sampler.first_name }}\"))\n",
+    "\n",
+    "config_builder.add_column(dd.ExpressionColumnConfig(name=\"last_name\", expr=\"{{ patient_sampler.last_name }}\"))\n",
+    "\n",
+    "config_builder.add_column(dd.ExpressionColumnConfig(name=\"dob\", expr=\"{{ patient_sampler.birth_date }}\"))\n",
+    "\n",
+    "config_builder.add_column(\n",
+    "    dd.SamplerColumnConfig(\n",
+    "        name=\"symptom_onset_date\",\n",
+    "        sampler_type=dd.SamplerType.DATETIME,\n",
+    "        params=dd.DatetimeSamplerParams(start=\"2024-01-01\", end=\"2024-12-31\"),\n",
+    "    )\n",
     ")\n",
     "\n",
     "config_builder.add_column(\n",
-    "    name=\"first_name\",\n",
-    "    column_type=\"expression\",\n",
-    "    expr=\"{{ patient_sampler.first_name}}\",\n",
+    "    dd.SamplerColumnConfig(\n",
+    "        name=\"date_of_visit\",\n",
+    "        sampler_type=dd.SamplerType.TIMEDELTA,\n",
+    "        params=dd.TimeDeltaSamplerParams(dt_min=1, dt_max=30, reference_column_name=\"symptom_onset_date\"),\n",
+    "    )\n",
     ")\n",
     "\n",
-    "config_builder.add_column(\n",
-    "    name=\"last_name\",\n",
-    "    column_type=\"expression\",\n",
-    "    expr=\"{{ patient_sampler.last_name }}\",\n",
-    ")\n",
-    "\n",
+    "config_builder.add_column(dd.ExpressionColumnConfig(name=\"physician\", expr=\"Dr. {{ doctor_sampler.last_name }}\"))\n",
     "\n",
     "config_builder.add_column(\n",
-    "    name=\"dob\",\n",
-    "    column_type=\"expression\",\n",
-    "    expr=\"{{ patient_sampler.birth_date }}\",\n",
-    ")\n",
-    "\n",
-    "config_builder.add_column(\n",
-    "    name=\"symptom_onset_date\",\n",
-    "    column_type=\"sampler\",\n",
-    "    sampler_type=\"datetime\",\n",
-    "    params={\"start\": \"2024-01-01\", \"end\": \"2024-12-31\"},\n",
-    ")\n",
-    "\n",
-    "config_builder.add_column(\n",
-    "    name=\"date_of_visit\",\n",
-    "    column_type=\"sampler\",\n",
-    "    sampler_type=\"timedelta\",\n",
-    "    params={\"dt_min\": 1, \"dt_max\": 30, \"reference_column_name\": \"symptom_onset_date\"},\n",
-    ")\n",
-    "\n",
-    "config_builder.add_column(\n",
-    "    name=\"physician\",\n",
-    "    column_type=\"expression\",\n",
-    "    expr=\"Dr. {{ doctor_sampler.last_name }}\",\n",
-    ")\n",
-    "\n",
-    "config_builder.add_column(\n",
-    "    name=\"physician_notes\",\n",
-    "    column_type=\"llm-text\",\n",
-    "    prompt=\"\"\"\\\n",
+    "    dd.LLMTextColumnConfig(\n",
+    "        name=\"physician_notes\",\n",
+    "        prompt=\"\"\"\\\n",
     "You are a primary-care physician who just had an appointment with {{ first_name }} {{ last_name }},\n",
     "who has been struggling with symptoms from {{ diagnosis }} since {{ symptom_onset_date }}.\n",
     "The date of today's visit is {{ date_of_visit }}.\n",
@@ -313,7 +299,8 @@
     "Format the notes as a busy doctor might.\n",
     "Respond with only the notes, no other text.\n",
     "\"\"\",\n",
-    "    model_alias=MODEL_ALIAS,\n",
+    "        model_alias=MODEL_ALIAS,\n",
+    "    )\n",
     ")\n",
     "\n",
     "data_designer.validate(config_builder)"
@@ -321,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4aa32dd",
+   "id": "8fcce5dc",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -338,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be850e8",
+   "id": "82dc02f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fd581ca",
+   "id": "1f2d1583",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "206445c9",
+   "id": "62a9173b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0a2806",
+   "id": "5263e705",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -382,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e826d8de",
+   "id": "5295320f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e786fe6d",
+   "id": "3ecc195f",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -405,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "528e8462",
+   "id": "3865fb59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "214b5fd5",
+   "id": "a7acf2b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a21c2dca",
+   "id": "81a6e999",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ca5cc0",
+   "id": "4503b1cf",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
