--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9a8f4f64",
+   "id": "90dda708",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85440f7",
+   "id": "52ccb1e5",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d90bd46",
+   "id": "9627c4eb",
    "metadata": {},
    "source": [
     "### 📦 Import Data Designer\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a8e1a9",
+   "id": "1817171a",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f715c28a",
+   "id": "1f15a669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e33732b",
+   "id": "1201c93b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc63dfe9",
+   "id": "f814b76c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,12 +100,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c40cb71",
+   "id": "ac423d57",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
     "\n",
-    "- `DataDesigner` is the main object is responsible for managing the data generation process.\n",
+    "- `DataDesigner` is the main object responsible for managing the data generation process.\n",
     "\n",
     "- When initialized without arguments, the [default model providers](https://nvidia-nemo.github.io/DataDesigner/latest/concepts/models/default-model-settings/) are used.\n"
    ]
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb51e97",
+   "id": "3c655c2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cc7aca4",
+   "id": "7d41e922",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63404d3f",
+   "id": "a8b5f4bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ee89b0",
+   "id": "6455fc58",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61077e2e",
+   "id": "462c2e01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8af0928",
+   "id": "31369d10",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ebc13e3",
+   "id": "55d9432a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02e9aeb6",
+   "id": "8614c4e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba81b496",
+   "id": "80550e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa08941d",
+   "id": "65ced9bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a40e41d6",
+   "id": "34b210e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,10 +306,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f89ae56",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "d506903d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add a column to generate detailed document summaries\n",
@@ -330,20 +328,14 @@
     "            )\n",
     "        ],\n",
     "    )\n",
-    ")"
+    ")\n",
+    "\n",
+    "data_designer.validate(config_builder)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1e28672e",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18c97f17",
+   "id": "b91032a2",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -360,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "838e3fe0",
+   "id": "4bd947de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e8e9a18",
+   "id": "d0ff4c07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdf635f7",
+   "id": "e97e4dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f94b2ba8",
+   "id": "0a284c12",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -404,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f38cc55",
+   "id": "2570e7fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc6616a7",
+   "id": "28b8eb5a",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -425,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35405370",
+   "id": "5d0d9336",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -449,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c7a2b96",
+   "id": "1c257a81",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -462,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a158540",
+   "id": "e6d840e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183cd111",
+   "id": "909e6f3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6a3eac1",
+   "id": "adbb4cae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe3bff71",
+   "id": "d085584c",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
